<resources>
    <string name="app_name">FYP_KhanaBachao</string>
    <string name="khana_bachao">KHANA BACHAO</string>
    <string name="love_food_hate_waste">Love Food . Hate Waste</string>
    <string name="i_m_food_provider">I M FOOD PROVIDER</string>
    <string name="i_m_food_consumer">I M FOOD CONSUMER</string>
    <string name="usernamehint">Username</string>
    <string name="passwordhint">password</string>
    <string name="forget_password">Forget Password</string>
    <string name="gologin">GO</string>
    <string name="hello_there_welcome_back">Hello there, Welcome back</string>
    <string name="sign_in_to_continuelogin">Sign-in to continue</string>
    <string name="new_user_sign_uplogin">New User? SIGN-UP</string>
    <string name="hello_thereconsujmer">hello_there</string>
    <string name="welcome_REGISTERC">WELCOME</string>
    <string name="full_namecsignup">Full Name</string>
    <string name="user_namecsignup">User Name</string>
    <string name="emailcsignup">Email</string>
    <string name="phonecsignup">phone</string>
    <string name="addresscsignup">address</string>
    <string name="citycsignup">city</string>
    <string name="passwordcsignup">password</string>
    <string name="gocsignup">GO</string>
    <string name="signup_to_get_started">SignUp to get started</string>
    <string name="already_have_an_account_login">Already have an account? LogIn</string>
    <string name="consumer_dashboard">CONSUMER DASHBOARD</string>
    <string name="logoutc">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="consumer_profile">consumer profile</string>
    <string name="email_addressaa">Email Address</string>
    <string name="my_profileC">MY PROFILE</string>
    <string name="updateconspro">UPDATE</string>
    <string name="hello_there_welcome_back_pro">Hello there welcome back</string>
    <string name="welcome_pro">welcome</string>
    <string name="provider_dashboardd">provider dashboardd</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="addresss">Address</string>
    <string name="city">City</string>
    <string name="update_password">Update Password</string>
    <string name="update_passwordas">Update Password</string>
    <string name="update_passwordz">Update Password</string>
    <string name="drawer_header">Drawer header</string>
    <string name="profileaa">Profile</string>
    <string name="logoutaa">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="expiryd">Expiry</string>
    <string name="quantityf">Quantity</string>
    <string name="descriptionf">Description</string>
    <string name="titlef">Title</string>
    <string name="rs_299F">RS 299</string>
    <string name="food_name">Food Name</string>
    <string name="food_quantity">Food Quantity</string>
    <string name="expiry_limit">Expiry limit</string>
    <string name="expiry_Limit">Expiry Limit</string>
    <string name="foodprice">Price</string>
    <string name="price_in_rupees">Price in rupees</string>
    <string name="add_image">Add Image</string>
    <string name="upload">Upload</string>
    <string name="image">IMAGE</string>
    <string name="insert_image">Insert Image</string>
    <string name="user">User</string>
    <string name="provider">Provider</string>
    <string name="my_listing">my listing</string>
    <string name="address">Address</string>
    <string name="citycon">city</string>
    <string name="addresscons">address</string>
    <string name="block">block</string>
    <string name="describe_your_food">Describe your food</string>
    <string name="home_restaurant">Home/Restaurant</string>
    <string name="foodname">Name</string>
    <string name="sourcedash">source</string>
    <string name="delivery_option">delivery option</string>
    <string name="addressdash">Address</string>
    <string name="citydash">City</string>
    <string name="quantitydash">Quantity</string>
    <string name="expirydashh">Expiry</string>
    <string name="deliverydash">Delivery</string>
    <string name="pricedashh">Price</string>
    <string name="adressdashh">Adress</string>
    <string name="citydashh">City</string>
    <string name="asdsa">camera img</string>
    <string name="cameraaa">CAMERA</string>
    <string name="gallery">Gallery</string>
    <string name="galleryS">GALLERY</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_food">Upload Food</string>
    <string name="todhho">TODhhO</string>
    <string name="updatefoodaa">Update</string>
    <string name="yes_noss">yes/no</string>
    <string name="description">Description</string>
    <string name="sourcesa">Source</string>
    <string name="todoimg">TODOimg</string>
    <string name="search">Search</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_by_namemyfood">Search by name</string>
    <string name="deleteas">Delete</string>
    <string name="updatefood">Update</string>
    <string name="upload_imageupdate">Upload Image</string>
    <string name="food_detail">Food Detail</string>
    <string name="upload_foodehad">Upload Food</string>
    <string name="updatefoodhead">Update Food</string>
    <string name="my_itemshead">My Items</string>
    <string name="quantityheadd">Quantity:</string>
    <string name="title_activity_check">CheckActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_DrawerOpen">Drawer Open</string>
    <string name="menu_DrawerClose">Drawer Close</string>
    <string name="restaurants_leftovers">Restaurants Leftovers</string>
    <string name="home_made_leftovers">Home Made Leftovers</string>
    <string name="delivery_type_yes_no">Delivery ( type Yes/No )</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin_dashboardaa">Admin Dashboard</string>
    <string name="users_listas">Users List</string>
    <string name="warningsas">Warnings</string>
    <string name="person_namea">Person Name</string>
    <string name="person_emailqq">Person Email</string>
    <string name="emailz">Email</string>
    <string name="send_needy_s_location">Send Needy\'s Location</string>
    <string name="send_location">Send Location</string>
    <string name="tag_needy">Tag Needy</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="user_type">User Type</string>
    <string name="namech">Name</string>
    <string name="chusername">chusername</string>
    <string name="ch_user_name">User Name</string>
    <string name="ch_name">NAME</string>
    <string name="ch_email">Email</string>
    <string name="emailch">email</string>
    <string name="contact">Contact</string>
    <string name="charity_users">Charity Users</string>
    <string name="todoadasdfa">TODO</string>
    <string name="user_namede">User Name</string>
    <string name="namede">Name</string>
    <string name="emailde">Email</string>
    <string name="contactde">Contact</string>
    <string name="charity_organiationsas">Charity Organiations</string>
    <string name="detailsch">Details</string>
    <string name="request_food">Request Food</string>
    <string name="cancel_requestz">Cancel Request</string>
    <string name="statusab">Status</string>
    <string name="statusas">Status</string>
    <string name="statusae">Status:</string>
    <string name="statuszz">Status</string>
    <string name="my_requested_itemsz">My Requested Items</string>
    <string name="my_accepted_items">My Accepted Items</string>
    <string name="my_requested_items">My Requested Items</string>
    <string name="requests_receivedzz">Requests Received</string>
    <string name="requests_accepted">Requests Accepted</string>
    <string name="requests_receivedzza">Requests Received</string>
    <string name="requests_received">Requests Received</string>
    <string name="accept_request">Accept Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="requests_receivedadaf">Requests Received</string>
    <string name="requests_acceptedqwe">Requests Accepted</string>
    <string name="aaxaasca">adada</string>
    <string name="dkefawcx">Uploader Name</string>
    <string name="my_request_accepted_itemsASDAD">MY REQUEST ACCEPTED ITEMS</string>
    <string name="ratezsa">Rate</string>
    <string name="user_typemkj">User Type:</string>
    <string name="all_usersadmin">All Users</string>
    <string name="ewa">Admin</string>
    <string name="admin_dashboardzzs">Admin Dashboard</string>
    <string name="food_drivezz">Food Drive</string>
    <string name="user_detailaa">User Detail</string>
    <string name="uploader_name">Uploader Name:</string>
    <string name="payment_receipta">Payment Receipt</string>
    <string name="payment_receiptzz">Payment Receipt</string>
    <string name="food_uploader">Food Uploader</string>
    <string name="food_consumerx">Food Consumer</string>
    <string name="consumer_nameaa">Consumer Name</string>
    <string name="food_namez">Food Name</string>
    <string name="food_namecs">Food Name</string>
    <string name="food_namexa">Food Name:</string>
    <string name="food_consumerxs">Food Consumer:</string>
    <string name="food_uploadereq">Food Uploader:</string>
    <string name="uploaded_timecd">Uploaded Time:</string>
    <string name="uploaded_timems">Uploaded Time:</string>
    <string name="pricesas">Price:</string>
    <string name="pricecds">Price</string>
    <string name="timeadaa">time</string>
    <string name="uploader_adress">Uploader Adress:</string>
    <string name="cityzas">City:</string>
    <string name="citydas">City</string>
    <string name="addressaeas">Address</string>
    <string name="admin_loginzzz">Admin Login</string>
</resources>