<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".paymentReceipt">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:fontFamily="@font/sansbold"
        android:padding="7dp"
        android:text="@string/payment_receiptzz"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_namexa"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/foodnamer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/food_namez"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_uploadereq"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
             />

        <TextView
            android:id="@+id/uplodernamer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/uploader_name"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_consumerxs"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/consumernamer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/consumer_nameaa"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pricesas"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/foodpricer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/pricecds"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uploader_adress"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/addresser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/addressaeas"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cityzas"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/cityr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/citydas"
            />

    </LinearLayout>

</LinearLayout>
</LinearLayout>