<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".consumerLOGIN"
    android:orientation="vertical"

    android:background="#FFFFFF"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#009688"
        >

        <ImageView
            android:id="@+id/loginlogoImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fyplogo"
            android:layout_gravity="center"
            android:padding="20dp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sansbold"
        android:padding="7dp"
        android:text="@string/hello_there_welcome_back"
        android:textColor="#009688"
        android:textSize="25sp"
        android:transitionName="titlec"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continuelogin"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginLeft="7dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/consumerlogusernameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailz"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/consumerlogpwdId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordhint"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:layout_gravity="end"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="5sp"
            android:textStyle="bold"
            android:onClick="forgetPassword"
            />
        <Button
            android:id="@+id/cloginId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gologin"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:textSize="18sp"
            android:backgroundTint="#009688"
            android:onClick="loginConsumer"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/csignuponloginscreenId"
            android:layout_width="200sp"
            android:layout_height="30sp"
            android:text="@string/new_user_sign_uplogin"
            android:layout_gravity="center"
            android:layout_marginStart="14sp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="5sp"
            android:onClick="signupConsumer"
            />

        <TextView
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1sp"
            android:onClick="adminLogin"
            android:text="@string/ewa"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>