<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/charityusercardviewid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:layout_margin="10dp"
        app:cardUseCompatPadding="true"
        android:padding="4dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#F1F1F1"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/charitusernameid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:maxLines="1"
                android:text="@string/ch_user_name"
                android:textColor="@color/teal_700"
                android:textSize="18sp"
                android:textStyle="bold" />


                <TextView
                    android:id="@+id/charitynameid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ch_name"
                    android:textSize="15sp"
                    android:layout_marginStart="10sp"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                >

                <TextView
                    android:id="@+id/emailviewid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/ch_email"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/charityemailid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/emailch"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                >

                <ImageView
                    android:id="@+id/phoneiconid"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:src="@drawable/phone"
                    android:contentDescription="@string/aaxaasca" />

                <TextView
                    android:id="@+id/charitycontactid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9sp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/contact"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>



        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>