<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CharityUserListDetail">

    <TextView
        android:id="@+id/charityid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:fontFamily="@font/sansbold"
        android:padding="7dp"
        android:text="@string/detailsch"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:layout_margin="10dp"
        app:cardUseCompatPadding="true"
        android:padding="4dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#F1F1F1"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/charityuserdenameid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:maxLines="1"
                android:text="@string/user_namede"
                android:textColor="@color/teal_700"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/charitynamedeid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/namede"
                android:textSize="15sp"
                android:layout_marginStart="10sp"
                android:textColor="@color/black"
                android:maxLines="1"
                />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                >

                <TextView
                    android:id="@+id/emailviewid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10sp"
                    android:text="@string/ch_email"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/charityemaildeid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_toEndOf="@id/emailviewid"
                    android:text="@string/emailde"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="5dp"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/phoneiconid"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/phone"
                    android:contentDescription="@string/todoadasdfa" />

                <TextView
                    android:id="@+id/charitycontactdeid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9sp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_toEndOf="@+id/phoneiconid"
                    android:text="@string/contactde"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/chatlistt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:backgroundTint="#009688"
                android:onClick="openChatCharity"
                android:text="Chat"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>