<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLogin"
    android:orientation="vertical"

    android:background="#FFFFFF"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#009688"
        >

        <ImageView
            android:id="@+id/loginlogoImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fyplogo"
            android:layout_gravity="center"
            android:padding="20dp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sansbold"
            android:text="@string/admin_loginzzz"
            android:textColor="#009688"
            android:textSize="35sp"

            android:transitionName="titlec"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_continuelogin"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:orientation="vertical"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/consumerlogusernameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailz"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/consumerlogpwdId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordhint"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/cloginId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gologin"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="5sp"
                android:textSize="18sp"
                android:backgroundTint="#009688"
                android:onClick="loginAdminBtn"
                android:textStyle="bold"

                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>